# static

./: CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: cmake.yml
docs/: test.md
static/: event.h  log.h  test.h
tests/: log_custom.c  log_default.c  log_oslog.c  log_syslog.c  test_event.c  test_gherkin.c  test_test.c
